# cloudflare-demo

./: README.md
api/: Cargo.toml  wrangler.toml
api/src/: lib.rs
web/: README.md  package.json
web/src/views/: HomeView.vue
