[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Markus Ryöti <mryoti@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3.3"
serde = "1.0.228"
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["cors"] }
